Changes for 1.0beta10:

 - added frontends/include.classes.inc.php (Alexei)
 - show selected host in Host Add form (Alexei)
 - fixed snmptrap.sh (Alexei)
 - improved performance of simple graphs (Alexei)
 - minor fixes to eliminate compiler's warnings (Alexei)
 - fix to show HTML characters of string items in Latest Values and
 History  (Alexei)
 - added disk statistics to data.sql (Alexei)
 - popup confirmation screen for deletes and updates (Alexei)
 - buttons "Activate selected" and "Disable selected" in item
 maintenance form (Alexei)
 - do not wrap Latest Values (Alexei)
 - support for changing of graph items (Alexei)
 - menu will not require more than three lines (Alexei)
 - fixed dividion by zero in chart2.php (Alexei)
 - period and start of interval are preserved in full-screen mode (Alexei)
 - added units in graph legends (Alexei)
 - table-like legend for user graphs (Alexei)
 - small fix for executing user scripts (Alexei)
 - fix to enable use of abschange() (Alexei)
 - cosmetic change of "LATEST VALUES" screen (Alexei)
 - support for simple checks :smtp_perf, ftp_perf, ssh_perf, etc. (Alexei)
 - fixed nasty bug in getting SNMP parameters. Thanks to Igor Micko.
 (Alexei)
 - added support for diskused[*] (Alexei)
 - Alert History renamed to Alerts (Alexei)
 - Status of Triggers renamed to Triggers (Alexei)
 - added check for kstat library for ./configure (Alexei)
 - added support for zabbix[queue] (Alexei)
 - added basic support for simple graphs in screens (Alexei)
 - added table screens_graphs (Alexei)
 - dynamic form hosts.php (Alexei)
 - fixed 'make clean' under Solaris (rm -fv -> rm -f) (Alexei)
 - link map's connector to a trigger
 - added parameter ListenIP to zabbix_agentd.conf (Alexei)
 - added pinger.c and pinger.h (Alexei)
 - fixed search of SNMP header files and libs (Alexei)
 - improved performance of Alarm and Alert History (Alexei)
 - added support for units (Mb, Kb, Gb, etc) (Alexei)
 - added column items.multiplier (Alexei)